--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" id="theme-color" content="" />
-    <meta name="description" content="Uptime Kuma monitoring tool" />
-    <title>Uptime Kuma</title>
+    <meta name="description" content="Monevika monitoring tool" />
+    <title>Monevika</title>
 </head>
 <body>
 <div id="app"></div>
